Fix stuck state on conversion failure

--- a/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
@@ -63,6 +63,7 @@ $item-height: 1rem;
 
 .tableItemActions {
   min-width: 68px; // size of the 2 icons (check/trash)
+  text-align: right;
 }
 
 .tableItemIcon > i {
